--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Koshelev's business card website</title>
 </head>
 <body>
-    <section class="main__title">
+    <section class="main__title flex flex__center">
         <div class="main__inner">
             <h1 class="title">Помощь при разработке сайта</h1>
         </div>
+        <div class="main__contacts">
+            <a class="contact__link flex flex__center" href="">
+                <img class="contact__icon" src="img/icons8-telegram-50.svg" alt="telegram icon">
+            </a>
+        </div>
     </section>
-    <section class="services">
-        <div class="services__inner">
+    <section class="services container">
+        <div class="services__inner flex flex__center">
             <div class="service__title">
                 <h2 class="subtitle">Услуги</h2>
             </div>
-            <div class="services__contacts">
-                <img class="contact__icon" src="" alt="">
-            </div>
             <div class="services__cards">
-                <div class="cards__inner">
+                <div class="cards__inner flex flex__center">
                     <div class="card">
-                        <img class="card__img" src="" alt="">
+                        <img class="card__img" src="img/_eele.jpg" alt="card img">
                         <div class="text__block">
                             <h3 class="card__text">
                                 Вёрстка HTML CSS JavaScript
                             </h3>
-                            <ul class="card__list">
+                            <ul class="card__list flex flex__center">
                                 <li>
                                     <p>Вёрстка по макету или референсу</p>
                                 </li>
@@ -41,12 +47,12 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card__img" src="" alt="">
+                        <img class="card__img" src="img/_eele.jpg" alt="card img">
                         <div class="text__block">
                             <h3 class="card__text">
                                 Работа с Wordpress
                             </h3>
-                            <ul class="card__list">
+                            <ul class="card__list flex flex__center">
                                 <li>
                                     <p>"Натяжка" вёрстки на CMS</p>
                                 </li>
@@ -59,26 +65,29 @@
                             </ul>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </div>
     </section>
-    <section class="about">
-        <div class="about__inner">
-            <h2 class="subtitle">О моих навыках</h2>
+    <section class="about container">
+        <div class="about__inner flex flex__center">
+            <h2 class="about__subtitle subtitle">О моих навыках</h2>
             <div class="about__text">
                 <p class="text">
                     Данный сайт был свёрстан с использованием технологий HTML5 CSS3 и JavaScript. В процессе создания вёрстки была использована система 
-                    контроля версий git. Код вёрстки был загружен на GitHub. После создания вёрстки она была "натянута" и настроена для администрирования на CMS Wordpress.
+                    контроля версий git. Код вёрстки был загружен на <a class="link" href="">GitHub</a>. После создания вёрстки она была "натянута" и настроена для администрирования на CMS Wordpress.
                 </p>
             </div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="footer__contacts">
-            <div class="h3">Я в телеграм</div>
-            <div class="contact__img">
-                <img class="contact__icon" src="" alt="">
+    <footer class="footer container">
+        <div class="footer__contacts flex flex__center">
+            <h3 class="footer__text">Мои контакты</h3>
+            <div class="contact__img flex">
+                <a class="contact__link flex flex__center" href="">
+                    <img class="contact__icon" src="img/icons8-telegram-50.svg" alt="telegram icon">
+                </a>
             </div>
         </div>
     </footer>
