I added responsive CSS styles

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             <h3 class="card__text">
                                 Вёрстка HTML CSS JavaScript
                             </h3>
+                            <img class="click__icon" src="img/icons8-click-50.png" alt="telegram icon">
                             <ul class="card__list flex flex__center">
                                 <li>
                                     <p>Вёрстка по макету или референсу</p>
@@ -52,6 +53,7 @@
                             <h3 class="card__text">
                                 Работа с Wordpress
                             </h3>
+                            <img class="click__icon" src="img/icons8-click-50.png" alt="telegram icon">
                             <ul class="card__list flex flex__center">
                                 <li>
                                     <p>"Натяжка" вёрстки на CMS</p>
