I finished styles of site

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <title>Koshelev's business card website</title>
 </head>
 <body>
-    <section class="main__title flex flex__center">
+    <section class="main__title flex flex__center" style="background-image: url('img/ca3bc999b1e9f6de5ae2ae23b1576ab8.webp');">
         <div class="main__inner">
             <h1 class="title">Помощь при разработке сайта</h1>
         </div>
         <div class="main__contacts">
             <a class="contact__link flex flex__center" href="">
-                <img class="contact__icon" src="img/icons8-telegram-50.svg" alt="telegram icon">
+                <img class="contact__icon title__icon" src="img/icons8-telegram-50.svg" alt="telegram icon">
             </a>
         </div>
     </section>
@@ -27,8 +27,8 @@
             </div>
             <div class="services__cards">
                 <div class="cards__inner flex flex__center">
-                    <div class="card">
-                        <img class="card__img" src="img/_eele.jpg" alt="card img">
+                    <div class="card element__animation">
+                        <img class="card__img" src="img/verstka2.webp" alt="card img">
                         <div class="text__block">
                             <h3 class="card__text">
                                 Вёрстка HTML CSS JavaScript
@@ -47,8 +47,8 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
-                        <img class="card__img" src="img/_eele.jpg" alt="card img">
+                    <div class="card element__animation">
+                        <img class="card__img" src="img/wordpress-development-services-9380d16f389b54ea73e0ccfa443363ceb4cb650c4144aef7a6d56506e868db74-1910.webp" alt="card img">
                         <div class="text__block">
                             <h3 class="card__text">
                                 Работа с Wordpress
@@ -93,5 +93,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
