I did litle changes at styles

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1 class="title">Помощь при разработке сайта</h1>
         </div>
         <div class="main__contacts">
-            <a class="contact__link flex flex__center" href="">
-                <img class="contact__icon title__icon" src="img/icons8-telegram-50.svg" alt="telegram icon">
+            <a class="contact__link flex flex__center" href="" target="_blank">
+                <img class=" title__icon" src="img/icons8-telegram-50.svg" alt="telegram icon">
             </a>
         </div>
     </section>
@@ -78,7 +78,7 @@
             <div class="about__text">
                 <p class="text">
                     Данный сайт был свёрстан с использованием технологий HTML5 CSS3 и JavaScript. В процессе создания вёрстки была использована система 
-                    контроля версий git. Код вёрстки был загружен на <a class="link" href="">GitHub</a>. После создания вёрстки она была "натянута" и настроена для администрирования на CMS Wordpress.
+                    контроля версий git. Код вёрстки был загружен на <a class="link" href="https://github.com/Danila-A/First-business-card-website" target="_blank">GitHub</a>. После создания вёрстки она была "натянута" и настроена для администрирования на CMS Wordpress.
                 </p>
             </div>
         </div>
@@ -87,7 +87,7 @@
         <div class="footer__contacts flex flex__center">
             <h3 class="footer__text">Мои контакты</h3>
             <div class="contact__img flex">
-                <a class="contact__link flex flex__center" href="">
+                <a class="contact__link flex flex__center" href="" target="_blank">
                     <img class="contact__icon" src="img/icons8-telegram-50.svg" alt="telegram icon">
                 </a>
             </div>
